Fri Nov 12 16:35:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: support C level backtrace information on FreeBSD.
	  When devel/libexecinfo is installed on FreeBSD, now ruby
	  can show C level backtrace information.
	  http://www.freebsd.org/cgi/cvsweb.cgi/ports/devel/libexecinfo/

Fri Nov 12 09:58:30 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak: use findstr.exe instead of find.exe, because all
	  target build platforms should have findstr.exe, and, find.exe often
	  means another command such as cygwin's.

Fri Nov 12 00:30:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): need PRI_LL_PREFIX.

Thu Nov 11 23:38:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: ANSI C-conforming const and volatile are mandatory

	* configure.in (AC_C_CONST, AC_C_INLINE, AC_C_VOLATILE): check
	  before used in other checks.

	* configure.in (RUBY_CHECK_PRINTF_PREFIX): should not break from
	  RUBY_WERROR_FLAG, so that ac_c_werror_flag gets restored.

Thu Nov 11 23:04:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (warn_deprecated): show caller position.

Thu Nov 11 23:03:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_close): untie tied io before closing.

	* io.c (argf_write): add ARGF.write and so on.

	* io.c (argf_read_nonblock): add ARGF.read_nonblock.

Thu Nov 11 21:49:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/stats.rb (RDoc#print): get rid of NaN.

Thu Nov 11 21:47:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (SHOWFLAGS): show compile flags.

	* common.mk: hide long command lines by default.  verbose-mode is
	  turned on by V=1 as before.
	  http://jarp.does.notwork.org/diary/200605b.html#200605121

Thu Nov 11 21:32:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_func): accept variable address.

	* ext/win32ole/extconf.rb: libuuid is needed on cygwin.
