@@ -41,21 +41,18 @@ scriptbin: $(SCRIPTPROGRAMS)
 
 %$(EXEEXT): bin/% $(STUBPROGRAM)
 	$(ECHO) generating $@
-	$(Q) \
-	{ cat $(STUBPROGRAM); echo; sed -e '1{' -e '/^#!.*ruby/!i\' -e '#!/bin/ruby' -e '}' $<; } > $@
+	$(Q) { cat $(STUBPROGRAM); echo; sed -e '1{' -e '/^#!.*ruby/!i\' -e '#!/bin/ruby' -e '}' $<; } > $@
 
 $(LIBRUBY): $(RUBY_EXP) $(LIBRUBY_SO)
 $(RUBY_EXP) $(LIBRUBY_SO): $(DLL_BASE_NAME).res.@OBJEXT@
 
 %.res.@OBJEXT@: %.rc
 	$(ECHO) compiling $@
-	$(Q) \
-	$(WINDRES) --include-dir . --include-dir $(<D) --include-dir $(srcdir)/win32 $< $@
+	$(Q) $(WINDRES) --include-dir . --include-dir $(<D) --include-dir $(srcdir)/win32 $< $@
 
 $(RCFILES): $(RBCONFIG) $(srcdir)/revision.h $(srcdir)/win32/resource.rb
 	$(ECHO) generating $@
-	$(Q) \
-	$(MINIRUBY) $(srcdir)/win32/resource.rb \
+	$(Q) $(MINIRUBY) $(srcdir)/win32/resource.rb \
 	  -ruby_name=$(RUBY_INSTALL_NAME) -rubyw_name=$(RUBYW_INSTALL_NAME) \
 	  -so_name=$(DLL_BASE_NAME) \
 	  . $(icondirs) $(srcdir)/win32
@@ -64,24 +61,20 @@ $(PROGRAM): $(RUBY_INSTALL_NAME).res.@OBJEXT@
 $(WPROGRAM): $(RUBYW_INSTALL_NAME).res.@OBJEXT@
 	@rm -f $@
 	$(ECHO) linking $@
-	$(Q) \
-	$(PURIFY) $(CC) -mwindows -e $(SYMBOL_PREFIX)mainCRTStartup $(LDFLAGS) $(XLDFLAGS) \
+	$(Q) $(PURIFY) $(CC) -mwindows -e $(SYMBOL_PREFIX)mainCRTStartup $(LDFLAGS) $(XLDFLAGS) \
 	  $(MAINOBJ) $(EXTOBJS) $(LIBRUBYARG) $(LIBS) -o $@
 $(STUBPROGRAM): $(RUBY_INSTALL_NAME).res.@OBJEXT@ stub.@OBJEXT@
 	@rm -f $@
 	$(ECHO) linking $@
-	$(Q) \
-	$(PURIFY) $(CC) $(LDFLAGS) $(XLDFLAGS) \
+	$(Q) $(PURIFY) $(CC) $(LDFLAGS) $(XLDFLAGS) \
 	  stub.@OBJEXT@ $(EXTOBJS) $(LIBRUBYARG) $(LIBS) -o $@
 
 $(RUBY_EXP): $(LIBRUBY_A)
 	$(ECHO) creating $@
-	$(Q) \
-	$(DLLWRAP) \
+	$(Q) $(DLLWRAP) \
 	  --output-exp=$(RUBY_EXP) \
 	  --export-all $(LIBRUBY_A) $(LIBS) -o $(PROGRAM)
-	$(Q) \
-	$(LDSHARED) $(DLDFLAGS) $(OBJS) dmyext.o $(SOLIBS) -o $(PROGRAM)
+	$(Q) $(LDSHARED) $(DLDFLAGS) $(OBJS) dmyext.o $(SOLIBS) -o $(PROGRAM)
 	@rm -f $(PROGRAM)
 
 GNUmakefile:	$(srcdir)/cygwin/GNUmakefile.in
@@ -96,8 +89,7 @@ $(LIBRUBY_SO): $(RUBYDEF)
 
 $(RUBYDEF): $(LIBRUBY_A) $(PREP) $(RBCONFIG)
 	$(ECHO) generating $@
-	$(Q) \
-	$(MINIRUBY) $(srcdir)/win32/mkexports.rb -output=$@ $(LIBRUBY_A)
+	$(Q) $(MINIRUBY) $(srcdir)/win32/mkexports.rb -output=$@ $(LIBRUBY_A)
 
 clean-local::
 	@$(RM) $(RUBYDEF)
@@ -105,8 +97,7 @@ clean-local::
 ifeq (@target_os@,cygwin)
 cygwin-$(RUBY_INSTALL_NAME)$(MAJOR)$(MINOR)$(TEENY).dll: $(LIBRUBY_A) $(RUBYDEF)
 	$(ECHO) generating $@
-	$(Q) \
-	@DLLWRAP@ -s --def=$(RUBYDEF) -o $@
+	$(Q) @DLLWRAP@ -s --def=$(RUBYDEF) -o $@
 endif
 
 clean-local::
