@@ -16,10 +16,8 @@ ripper.o: ripper.c lex.c eventids1.c eventids2.c eventids2table.c \
 
 .y.c:
 	$(ECHO) compiling compiler $<
-	$(Q) \
-	$(BISON) -t -v -oy.tab.c $<
-	$(Q) \
-	sed -f $(top_srcdir)/tool/ytab.sed -e "/^#/s!y\.tab\.c!$@!" y.tab.c > $@
+	$(Q) $(BISON) -t -v -oy.tab.c $<
+	$(Q) sed -f $(top_srcdir)/tool/ytab.sed -e "/^#/s!y\.tab\.c!$@!" y.tab.c > $@
 	@$(RM) y.tab.c
 
 all: check
@@ -27,28 +25,23 @@ static: check
 
 ripper.y: $(srcdir)/tools/preproc.rb $(top_srcdir)/parse.y
 	$(ECHO) extracting $@ from $<
-	$(Q) \
-	$(RUBY) $(srcdir)/tools/preproc.rb $(top_srcdir)/parse.y --output=$@
+	$(Q) $(RUBY) $(srcdir)/tools/preproc.rb $(top_srcdir)/parse.y --output=$@
 
 check: $(GEN) $(SRC1) $(SRC2)
 	$(ECHO) checking $(SRC1) and $(SRC2)
-	$(Q) \
-	$(RUBY) $(GEN) --mode=check --ids1src=$(SRC1) --ids2src=$(SRC2)
+	$(Q) $(RUBY) $(GEN) --mode=check --ids1src=$(SRC1) --ids2src=$(SRC2)
 
 eventids1.c: $(srcdir)/tools/generate.rb $(SRC1)
 	$(ECHO) generating $@ from $(SRC1)
-	$(Q) \
-	$(RUBY) $(GEN) --mode=eventids1 --ids1src=$(SRC1) --output=$@
+	$(Q) $(RUBY) $(GEN) --mode=eventids1 --ids1src=$(SRC1) --output=$@
 
 eventids2table.c: $(srcdir)/tools/generate.rb $(SRC2)
 	$(ECHO) generating $@ from $(SRC2)
-	$(Q) \
-	$(RUBY) $(GEN) --mode=eventids2table --ids2src=$(SRC2) --output=$@
+	$(Q) $(RUBY) $(GEN) --mode=eventids2table --ids2src=$(SRC2) --output=$@
 
 # Entries for Ripper maintainer
 
 preproc: ripper.E
 ripper.E: ripper.c
 	$(ECHO) preprocessing $<
-	$(Q) \
-	$(CC) -E $(CPPFLAGS) ripper.c | $(RUBY) $(srcdir)/tools/strip.rb > $@
+	$(Q) $(CC) -E $(CPPFLAGS) ripper.c | $(RUBY) $(srcdir)/tools/strip.rb > $@
